@@ -64,9 +64,22 @@
 [/advanced_preference]
 
 # this can be uncommented once type=int or similar is supported
+# the hardcoded value also needs to be removed from network.cpp
 #[advanced_preference]
 #    field=ping_timeout
 #    name=_"Ping Timeout"
 #    type=int
 #    default=60
+#    min=0
+#    max=180
+#    step=10
+#[/advanced_preference]
+
+#[advanced_preference]
+#    field=dummy_slider
+#    name="Dummy Slider"
+#    type=int
+#    default=42
+#    min=0
+#    max=50
 #[/advanced_preference]
