@@ -21,6 +21,7 @@ Version 1.7.1+svn:
    * Changed "Toggle Full Screen" button to say "Full Screen" (bug #13909)
    * Added cost of units recruited, recalled, killed, and lost, to the statistics window (patch #1190)
    * Fixed bug #13626: Bug about no option to turn on/off save delete confimation. (patch #1192)
+   * Allow [advanced_preference]s to be of the 'int' type, appearing as a slider.
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
